Fix - CSS: Bootstrap 4 with table-sm misaligned the Responsive button

--- a/css/responsive.bootstrap4.scss
+++ b/css/responsive.bootstrap4.scss
@@ -7,12 +7,3 @@ div.dtr-bs-modal table.table tr:first-child td {
 	border-top: none;
 }
 
-table.dataTable.dtr-inline.collapsed.table-sm > tbody > tr {
-	> td,
-	> th {
-		&:first-child:before {
-			top: 5px;
-		}
-	}
-}
-
